:ok_hand: style: aplica correcoes de eslint e prettier no projeto
