# src/application/dtos/createPokemonDTO.ts
@@ -1,6 +1,6 @@
-export interface CreatePokemonDTO{
-    name: string;
-    type: string[];
-    height: number;
-    weight: number;
+export interface CreatePokemonDTO {
+  name: string;
+  type: string[];
+  height: number;
+  weight: number;
 }
