# src/application/dtos/updatePokemonDTO.ts
@@ -1,6 +1,6 @@
-export interface UpdatePokemonDTO{
-    name?: string;
-    type?: string[];
-    height?: number;
-    weight?: number;
+export interface UpdatePokemonDTO {
+  name?: string;
+  type?: string[];
+  height?: number;
+  weight?: number;
 }
