# src/domain/entities/pokemon.ts
@@ -1,7 +1,7 @@
-export interface Pokemon{
-    id: string;
-    name: string;
-    type: string[];
-    height: number;
-    weight: number;
+export interface Pokemon {
+  id: string;
+  name: string;
+  type: string[];
+  height: number;
+  weight: number;
 }
